--- a/bernie-sql-editor-ton/pom.xml
+++ b/bernie-sql-editor-ton/pom.xml
@@ -156,6 +156,15 @@
             <version>0.9.2</version>
         </dependency>
 
+
+
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+
         <!-- TEST DEPENDENCIES -->
         <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
         <dependency>
