--- a/bernie-sql-editor-ton/pom.xml
+++ b/bernie-sql-editor-ton/pom.xml
@@ -21,12 +21,13 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2-beta-5</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <!--<mainClass>Main1</mainClass>-->
+                            <mainClass>de.christianbernstein.bernie.ses.bin.TonLauncher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -35,14 +36,16 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <id>make-assembly</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -52,7 +55,9 @@
                     <target>14</target>
                 </configuration>
             </plugin>
-            <plugin>
+
+
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
@@ -65,7 +70,7 @@
                         </manifest>
                     </archive>
                 </configuration>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
 
