--- a/ton/ton_config.yaml
+++ b/ton/ton_config.yaml
@@ -18,28 +18,26 @@ configPath: '{root_dir}config/'
 defaultConfigFileExtension: yaml
 enableBanner: true
 internalDatabaseConfiguration:
-  annotatedClasses: [
-    ]
+  annotatedClasses: []
   database: ton
   databaseDir: ./db/
   hbm2DDLMode: UPDATE
   password: root
   username: root
 jraPhaseOrder:
-- [
-  construct-phase]
-- [
-  inject-ton-api]
-- [
-  register-event-class-phase]
-- [
-  module]
-- [
-  flow]
-- [
-  cdn]
-- [
-  auto-exec]
+- [threaded-phase]
+- [construct-phase]
+- [inject-ton-api]
+- [register-event-class-phase]
+- [module]
+- [flow]
+- [cdn]
+- [auto-exec]
+loggerConfigs:
+- {level: 'OFF', logger: org.java_websocket, type: NAME}
+- {level: 'OFF', logger: org.reflections, type: NAME}
+- {level: 'OFF', logger: org.hibernate, type: NAME}
+- {level: 'OFF', logger: org.jboss, type: NAME}
 mode: DEBUG
 moduleConfigPath: '{root_dir}config/'
 rootDir: ton/
