--- a/bernie-sql-editor-sdk/pom.xml
+++ b/bernie-sql-editor-sdk/pom.xml
@@ -52,6 +52,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
             <groupId>org.hibernate</groupId>
